add new suscriber

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-notification-component></app-notification-component>
+<app-notification-component-a></app-notification-component-a>
 <app-notifier-component></app-notifier-component>
 <app-notifier-component-a></app-notifier-component-a>
 <app-notifier-component-b></app-notifier-component-b>
