--- a/src/app/notification-component/notification-component.component.html
+++ b/src/app/notification-component/notification-component.component.html
@@ -1,5 +1,7 @@
+<div  style="color: brown; border: solid; width: 500px; height: 100px;">
 <p>notification-component works!</p>
 
-<div *ngIf="notification">
+<div *ngIf="notification" >
     Notification: {{ notification }}
   </div>
+</div>
