--- a/src/app/notifier-component-a/notifier-component-a.component.html
+++ b/src/app/notifier-component-a/notifier-component-a.component.html
@@ -1,5 +1,5 @@
 <p>notifier-component-a works!</p>
-<button (click)="sendNotification()">Send Notification</button>
+<button (click)="sendNotification()">Send Notification by A</button>
 
 
 
