--- a/src/app/notifier-component-b/notifier-component-b.component.html
+++ b/src/app/notifier-component-b/notifier-component-b.component.html
@@ -1,3 +1,3 @@
 <p>notifier-component-b works!</p>
-<button (click)="sendNotification()">Send Notification</button>
+<button (click)="sendNotification()">Send Notification by B</button>
 
