--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,10 @@
 
 
 
-<div style="width: 500px; height: 100;  border: solid; border-color: rgb(226, 202, 248);">
+<div style="width: 200px; height: 100;  border: solid; border-color: rgb(226, 202, 248);">
+  data will emit soon.............
   <div *ngFor="let data of myData">{{data}}</div>
+  <div *ngFor="let data of myDataA">{{data}}</div>
 </div>
 
 
@@ -16,6 +18,7 @@
 <div >
   <button (click)="EmitData()">Emit</button>
   <button (click)="GetData()">Get</button>
+  <button (click)="GetDataA()">Get</button>
 </div>
 
 
