--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
 
 <div style="width: 200px; height: 100;  border: solid; border-color: rgb(226, 202, 248);">
   data will emit soon.............
-  <div *ngFor="let data of myData">{{data}}</div>
-  <div *ngFor="let data of myDataA">{{data}}</div>
+  <div style="width: 40%; float:left; background-color: blueviolet;" *ngFor="let data of myData">{{data}}</div>
+  <div style="width: 40%; float:right ; background-color: rgb(217, 186, 247);" *ngFor="let data of myDataA">{{data}}</div>
 </div>
 
 
